<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fats.com.pocketmonitor.MainActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/login_card">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/login_email"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textStyle="normal|bold"
                android:fontFamily="sans-serif-smallcaps"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/login_email"
                    android:hint="@string/email"
                    android:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/login_emailWrapper"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/login_passwordWrapper"
                android:id="@+id/button_login"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:elevation="2dp"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_to_register"
                android:text="@string/not_a_user_register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_below="@+id/button_login"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="12sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
