<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fats.com.pocketmonitor.MainActivity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_card"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@+id/register_name"
                    android:text="@string/app_name"
                    android:textSize="30sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorAccent"
                    android:textStyle="normal|bold"
                    android:fontFamily="sans-serif-smallcaps"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_nameWrapper"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:id="@+id/register_name"
                        android:inputType="textCapWords"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_emailWrapper"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/register_nameWrapper"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:id="@+id/register_email"
                        android:inputType="textEmailAddress"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_passwordWrapper"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/register_emailWrapper"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:id="@+id/register_password"
                        android:inputType="textPassword"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_confirmPasswordWrapper"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/register_passwordWrapper"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:id="@+id/register_confirm_password"
                        android:inputType="textPassword"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/register_confirmPasswordWrapper"
                    android:id="@+id/button_register"
                    android:layout_centerHorizontal="true"
                    android:text="@string/register"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:elevation="2dp"
                    android:textAppearance="@android:style/TextAppearance.Material"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_to_login"
                    android:text="@string/already_a_user_login"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_below="@+id/button_register"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

</RelativeLayout>